# learn-socratic

./: .gitignore  .skr.yaml.example  README.md  SKILL.md  SKILL_bak.md  fetch_all.py  pyproject.toml  requirements-dev.txt
data/: .gitkeep
docs/: ai-agent-skill-design-template.md  api-usage.md  architecture-design.md  data-model-design.md  design-coverage-checklist.md  softwareengineering-prompt-validation-playbook.md
modes/: ingest.md  learn.md  quiz.md  review.md  shared.md
references/: ingest.md  learn.md  quiz.md  reorder-topics.md  review.md  shared.md
scripts/: __init__.py  app.py  cli.py  repair_single_plan.py
scripts/cli/: __init__.py  main.py
scripts/foundation/: __init__.py  logger.py  storage.py
scripts/knowledge_graph/: __init__.py  api.py  ingest.py  reorder.py  store.py  validate.py
scripts/learning/: __init__.py  api.py  learn_chapter.py  session.py  state.py  tasking.py  validation.py
scripts/migrations/: merge_b2_into_parent_graph.py
scripts/orchestration/: orchestration_app_service.py  prompt_templates.py  session_state.py
tests/: conftest.py  helpers.py  skill_runtime_harness.py
tests/acceptance/: reporting.py  test_reporting.py
tests/contracts/: test_cli_docs_sync.py  test_docs_terminology.py  test_methodology_contracts.py
tests/docs/: test_cli_docs_sync.py  test_methodology_contracts.py
tests/fixtures/: __init__.py  cc_ch2_supplement_concepts.json  software_engineering_payloads.py
tests/foundation/: test_storage.py  test_transaction.py
tests/integration/: test_cli_e2e.py  test_end_to_end_flow.py  test_error_paths.py  (+4 more)
(+85 files in other folders)
