[project]
name = "learn-socratic"
version = "0.0.0"
description = "Socratic learning skill with knowledge graph ingest and learn/quiz/review loop"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["."]
